2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: use coordinates from
	the current device when starting to scroll. Grab the keyboard and
	pointer when panning with the space bar.

2006-09-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/text/gimptextlayout-render.c (gimp_text_layout_render_glyphs): 
	handle tabs correctly, as instructed by behdad.  Fixes
	bug #353132.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: added GUI for "space-bar-action".

2006-09-08  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpperspectiveclone.c (gimp_perspective_clone_motion):
	must not clamp the paint area against the boundary of the
	src_tiles. Various small cleanups.

	* app/paint/gimpsourcecore.[ch] (GimpSourceCore::motion): removed
	src_image parameter.

	Added new virtual function GimpSourceCore::get_source() and moved
	the source PR initialization code to its default implementation.
	(GimpPerspectiveClone will override this method later).

	* app/paint/gimpclone.c (gimp_clone_motion)
	* app/paint/gimpheal.c (gimp_heal_motion): changed accordingly.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/config/gimpdisplayconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/display/display-enums.[ch]: added new gimprc option
	"space-bar-action" and default to "pan". Will add a GUI for this later.

	* app/display/gimpdisplayshell-callbacks.c: respect the new option
	and either pan the display or push the move tool. Fixes bug #349903.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.[ch]: added function gimp_get_tool_info().

	* app/actions/tools-commands.c
	* app/actions/vectors-commands.c
	* app/tools/gimppainttool.c
	* app/widgets/gimpdrawabletreeview.c
	* app/widgets/gimpselectioneditor.c
	* app/widgets/gimptoolbox.c: use the new function instead of poking
	into gimp->tool_info_list.

	* app/display/gimpdisplayshell-callbacks.c