@@ -20,16 +20,18 @@
 #ifdef HAVE_CONFIG_H
 #  include <config.h>
 #endif
+
+#include <glib-object.h>
+
+#define NO_IMPORT_PYGOBJECT
+#include <pygobject.h>
+
 #include "pygimp.h"
 
 #define NO_IMPORT_PYGIMPCOLOR
 #include "pygimpcolor-api.h"
 
 #include <structmember.h>
-
-#include <glib-object.h>
-
-#include <pygobject.h>
 
 #ifndef PG_DEBUG
 # define PG_DEBUG 0
